fix: shift hero SVG upward on mobile to show more map content

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -25,6 +25,11 @@
 .about-hero-svg {
   width: 100%;
   height: 100%;
+
+  @media (max-width: $breakpoint-mobile) {
+    height: 140%;
+    margin-top: -15%;
+  }
 }
 
 // SVG element styles (light mode)
